implementando servicio de materiales

--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -346,7 +346,7 @@
     <div class="item3-content">
       <!-- aca va el chart -->
       <div class="chart-line marginTop">
-        <canvas id="myChartMateriales">
+        <canvas style="height: 409px;" id="myChartMateriales">
 
         </canvas>
       </div>
