--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -323,7 +323,7 @@
           <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
           <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
           <td data-label="Descuento promedio" class="alignTableItems"> {{tableAvgDescuento}}% </td>
-          <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} </td>
+          <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} %</td>
         </tr>
       </tbody>
 
