--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -253,7 +253,7 @@
 
     <div class="item3-content chartColor">
       <div class="chart-line">
-        <canvas id="myChartGeneral"></canvas>
+        <canvas style="height: 409px;" id="myChartGeneral"></canvas>
       </div>
     </div>
   </div>
