se organizan imagenes topten

--- a/src/app/components/productos/cat-hombre/cat-hombre.component.html
+++ b/src/app/components/productos/cat-hombre/cat-hombre.component.html
@@ -280,7 +280,7 @@
 
         <tbody>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[0]}}"><img
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[0]}}"><img
                   src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : default.png}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[0]}}</td>
@@ -290,8 +290,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[1]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[1]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[1]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[1]}}%</td>
@@ -300,8 +300,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[2]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[2]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[2]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[2]}}%</td>
@@ -310,8 +310,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[3]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[3]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[3]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[3]}}%</td>
@@ -320,8 +320,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[4]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[4]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[4]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[4]}}%</td>
@@ -330,8 +330,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[5]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[5]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[5]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[5]}}%</td>
@@ -340,8 +340,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[6]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[6]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[6]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[6]}}%</td>
@@ -350,8 +350,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[7]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[7]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[7]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[7]}}%</td>
@@ -360,8 +360,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[8]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[8]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[8]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[8]}}%</td>
@@ -370,8 +370,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[9]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[9]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[9]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[9]}}%</td>
