--- a/src/app/components/productos/general/general.component.html
+++ b/src/app/components/productos/general/general.component.html
@@ -375,8 +375,8 @@
 
         <tbody>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[0]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[0]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[0] !== '' ? topTenTipoPrenda[0] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[0]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[0]}}%</td>
@@ -385,8 +385,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[1]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[1]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[1] !== '' ? topTenTipoPrenda[1] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[1]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[1]}}%</td>
@@ -395,8 +395,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[2]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[2]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[2] !== '' ? topTenTipoPrenda[2] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[2]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[2]}}%</td>
@@ -405,8 +405,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[3]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[3]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[3] !== '' ? topTenTipoPrenda[3] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[3]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[3]}}%</td>
@@ -415,8 +415,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[4]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[4]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[4] !== '' ? topTenTipoPrenda[4] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[4]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[4]}}%</td>
@@ -425,8 +425,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[5]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[5]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[5] !== '' ? topTenTipoPrenda[5] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[5]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[5]}}%</td>
@@ -435,8 +435,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[6]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[6]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[6] !== '' ? topTenTipoPrenda[6] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[6]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[6]}}%</td>
@@ -445,8 +445,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[7]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[7]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[7] !== '' ? topTenTipoPrenda[7] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[7]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[7]}}%</td>
@@ -455,8 +455,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[8]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[8]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[8] !== '' ? topTenTipoPrenda[8] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[8]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[8]}}%</td>
@@ -465,8 +465,8 @@
               </abbr></td>
           </tr>
           <tr>
-            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{topTenTipoPrenda[9]}}"><img
-                  src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : default.png}}"
+            <td data-label="Tipo"><abbr style=" cursor:pointer" title="{{copy[9]}}"><img
+                  src="../../../../assets/productos/{{topTenTipoPrenda[9] !== '' ? topTenTipoPrenda[9] +'.png' : '/default.png'}}"
                   alt="" class="imgPrendasTabla" /></abbr></td>
             <td data-label="Total SKU">{{topTenTotalSKU[9]}}</td>
             <td data-label="%">{{topTenPorcentajeSKU[9]}}%</td>
