organizando observaciones de alejandro crystal

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
                 <div class="container-username">
-                    <p>Subida por <span>{{photo.usuario[0]?.username || photo.user}}</span></p>
+                    <p>Subida por <span>{{photo.usuario[0]?.username || photo.origin}}</span></p>
                 </div>
             </div>
 
