--- a/src/app/components/image-detail/image-detail.component.html
+++ b/src/app/components/image-detail/image-detail.component.html
@@ -243,7 +243,7 @@
 
           <div class="username-container-main">
             <div class="container-username">
-              <p>Subida por <span>{{photo.usuario[0]?.username || photo.user}}</span></p>
+              <p>Subida por <span>{{photo.usuario[0]?.username || photo.origin}}</span></p>
             </div>
           </div>
         </div>
