--- a/src/app/components/informes/informes.component.html
+++ b/src/app/components/informes/informes.component.html
@@ -17,7 +17,7 @@
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
               <li class="list-items-container">
                 <a class="sel2" routerLink="informeDescuentos" routerLinkActive="activo"
-                  (isActiveChange)="prueba()">Descuento promedio</a>
+                  >Descuento promedio</a>
               </li>
             </ul>
             <ul class="collapse list-unstyled itemlist" id="homeSubmenu">
