--- a/src/app/components/informes/informe-sku/informe-sku.component.html
+++ b/src/app/components/informes/informe-sku/informe-sku.component.html
@@ -321,9 +321,9 @@
     </thead>
     <tbody>
       <tr *ngFor="let e of photos">
-        <td data-label="Categoría" class="alignTableItems"> {{e.categoria}} </td>
-        <td data-label="Subcategoría" class="alignTableItems"> {{e.subCategoria}} </td>
-        <td data-label="Tipo de prenda" class="alignTableItems"> {{e.tipoPrenda}} </td>
+        <td data-label="Categoría" class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.categoria : 'todas'}} </td>
+        <td data-label="Subcategoría" class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.subCategoria : 'todas'}} </td>
+        <td data-label="Tipo de prenda" class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.tipoPrenda : 'todas'}} </td>
         <td data-label="SKU" class="alignTableItems"> {{tableAvgSKU}} </td>
         <td data-label="Precio promedio" class="alignTableItems">$ {{averagePrice}} </td>
         <td data-label="Nueva llegada" class="alignTableItems"> {{averageNews2}} </td>
