--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -318,11 +318,11 @@
       </thead>
       <tbody>
         <tr *ngFor="let e of photos">
-          <td data-label="Categoría"  class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.categoria : 'todas'}} </td>
-          <td data-label="Subcategoría"  class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.subCategoria : 'todas'}} </td>
-          <td data-label="Tipo de prenda"  class="alignTableItems"> {{selectedFilter2.length !== 0 ? e.tipoPrenda : 'todas'}} </td>
-          <td data-label="Los recién llegados"  class="alignTableItems"> {{tableAvgnuevos}} </td>
-          <td data-label="Diferencia" [ngClass]="diferencia()"  class="alignTableItems"> {{tableDifference[1]}} </td>
+          <td data-label="Categoría"  class="alignTableItems"> {{e._id.categoria !== null ? e._id.categoria : 'sin dato'}} </td>
+          <td data-label="Subcategoría"  class="alignTableItems"> {{e._id.subCategoria !== null ? e._id.subCategoria : 'sin dato'}} </td>
+          <td data-label="Tipo de prenda"  class="alignTableItems"> {{e._id.tipoPrenda !== null ? e._id.tipoPrenda : 'sin dato'}} </td>
+          <td data-label="Los recién llegados"  class="alignTableItems"> {{e.nuevos}} </td>
+          <td data-label="Diferencia"  class="alignTableItems"> 0 </td>
         </tr>
       </tbody>
     </table>
