--- a/src/app/components/informes/informe-descuento/informe-descuento.component.html
+++ b/src/app/components/informes/informe-descuento/informe-descuento.component.html
@@ -323,7 +323,7 @@
           <td data-label="Subcategoría" class="alignTableItems"> {{e._id.subCategoria !== null ? e._id.subCategoria : 'sin dato'}} </td>
           <td data-label="Tipo de prenda" class="alignTableItems"> {{e._id.tipoPrenda !== null ? e._id.tipoPrenda : 'sin dato'}} </td>
           <td data-label="Descuento promedio" class="alignTableItems"> {{e.porcentajeDescuento}}% </td>
-          <td data-label="Diferencia"  class="alignTableItems"> {{0}} %</td>
+          <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} %</td>
           <!-- [ngClass]="diferencia()" -->
         </tr>
       </tbody>
