--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -322,7 +322,7 @@
           <td data-label="Subcategoría"  class="alignTableItems"> {{e._id.subCategoria !== null ? e._id.subCategoria : 'sin dato'}} </td>
           <td data-label="Tipo de prenda"  class="alignTableItems"> {{e._id.tipoPrenda !== null ? e._id.tipoPrenda : 'sin dato'}} </td>
           <td data-label="Los recién llegados"  class="alignTableItems"> {{e.nuevos}} </td>
-          <td data-label="Diferencia"  class="alignTableItems"> 0 </td>
+          <td data-label="Diferencia" [ngClass]="diferencia()" class="alignTableItems"> {{tableDifference[1]}} </td>
         </tr>
       </tbody>
     </table>
