--- a/src/app/components/informe-categoria/table2/table2.component.html
+++ b/src/app/components/informe-categoria/table2/table2.component.html
@@ -173,7 +173,7 @@
         <td data-label="Talla" class="alignTableItems"> {{i.talla}} </td>
         <td data-label="Talla" class="alignTableItems"> {{i.tallasAgotadas}} </td>
         <td data-label="Precio" class="alignTableItems">$ {{setPrice(i.precio)}} </td>
-        <td data-label="Descuento" class="alignTableItems"> {{descuentoTable2}} % </td>
+        <td data-label="Descuento" class="alignTableItems"> {{i.porcentajeDescuento !== null ? i.porcentajeDescuento : '0'}} % </td>
       </tr>
     </tbody>
   </table>
