--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -185,9 +185,15 @@
                   class="dropdown-toggle menu-color">Marca
                 </a>
                 <ul class="collapse list-unstyled" id="filterMArk">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="marcaAll" type="checkbox" (change)="checkAllOrigin()" [checked]="isCheckedOrigin"/>
+                      Todo
+                    </label>
+                  </li>
                   <li *ngFor="let origin of originData; let marcaCheck = index">
                     <label class="control control--checkbox">
-                      <input class="marca2" type="checkbox" name="{{origin.value}}"
+                      <input class="marca2" type="checkbox" name="{{origin.value}}" 
                         (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
                         id="{{'marca2'+marcaCheck}}"
                         value="{{origin.value !== '' ? validateCheckOrigin2(origin.value, marcaCheck) : origin.value}}" />
@@ -202,6 +208,12 @@
                   class="dropdown-toggle menu-color">Categoria
                 </a>
                 <ul class="collapse list-unstyled" id="filterCategory">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="categoriaAll" type="checkbox" (change)="checkAllCategory()" [checked]="isCheckedCategory"/>
+                      Todo
+                    </label>
+                  </li>
                   <li *ngFor="let category of categoryData; let categoriaCheck2 = index">
                     <label class="control control--checkbox">
                       <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
@@ -219,6 +231,12 @@
                   class="dropdown-toggle menu-color">Sub categoría
                 </a>
                 <ul class="collapse list-unstyled" id="filterSubCategory">
+                  <li>
+                    <label class="control control--checkbox">
+                      <input class="subCategoriaAll" type="checkbox" (change)="checkAllSubCategory()" [checked]="isCheckedSubCategory"/>
+                      Todo
+                    </label>
+                  </li>
                   <li *ngFor="let subcategory of subCategoryData; let subCategoriaCheck2 = index">
                     <label class="control control--checkbox">
                       <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
@@ -238,6 +256,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterTipoPrenda">
                   <div class="overflow-auto container-scroll">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="tipoPrendaAll" type="checkbox" (change)="checkAllTipoPrenda()" [checked]="isCheckedTipoPrenda"/>
+                        Todo
+                      </label>
+                    </li>
                     <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck2 = index">
                       <label class="control control--checkbox">
                         <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
@@ -258,6 +282,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterColor">
                   <div class="overflow-auto checkboxAlign">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="colorAll" type="checkbox" (change)="checkAllColor()" [checked]="isCheckedColor"/>
+                        Todo
+                      </label>
+                    </li>
                     <div *ngFor="let color of colorData; let colorCheck2 = index">
                       <input class="color2 colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}"
                         title="{{color.text}}"
@@ -275,6 +305,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
+                    <li>
+                      <label class="control control--checkbox">
+                        <input class="composicionAll" type="checkbox" (change)="checkAllComposicion()" [checked]="isCheckedcomposicion"/>
+                        Todo
+                      </label>
+                    </li>
                     <li *ngFor="let composicion of composicionData; let composicionCheck2 = index">
                       <label class="control control--checkbox">
                         <input class="composicion2" type="checkbox" value="{{composicion.value}}"
