--- a/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
+++ b/src/app/components/informes/informe-nuevos/informe-nuevos.component.html
@@ -284,8 +284,7 @@
                   <div class="overflow-auto checkboxAlign">
                     <li>
                       <label class="control control--checkbox">
-                        <input class="colorAll" type="checkbox" (change)="checkAllColor()" [checked]="isCheckedColor"/>
-                        Todo
+                        <input class="colorAll colorStyles2" type="checkbox" (change)="checkAllColor()" [checked]="isCheckedColor"/>
                       </label>
                     </li>
                     <div *ngFor="let color of colorData; let colorCheck2 = index">
